--- a/FliperTask/FliperTask/styles.css
+++ b/FliperTask/FliperTask/styles.css
@@ -38,7 +38,7 @@ body {
 }
 
 .subscribe-btn {
-    background-color: #ffd700;
+    background-color: #FFD050;
     padding: 10px 15px;
     border-radius: 5px;
     color: black;
